Fix for CheckBox and Layout (#11407)
Change in CheckBoxConnector led to wrong enabled behaviour and addition
to top coordinate to prevent scrollbars with VPopupCalendar

--- a/WebContent/VAADIN/themes/base/common/common.scss
+++ b/WebContent/VAADIN/themes/base/common/common.scss
@@ -240,6 +240,7 @@ input::-ms-clear {
 
 .v-assistive-device-only {
 	position: absolute;
+	top: -2000px;
 	left: -2000px;
 	width: 10px;
 	overflow: hidden;
